fix(*): photoview width fix and remove lazyloading for some images, since causes flickering on real devices

--- a/ajapaik/ajapaik/static/css/ajapaik-style.css
+++ b/ajapaik/ajapaik/static/css/ajapaik-style.css
@@ -971,17 +971,16 @@ a.fullscreen {
 
 #ajapaik-compareview-main-photo,
 #ajapaik-compareview-secondary-photo,
-#ajapaik-photoview-main-photo,
-#ajapaik-photoview-rephoto
 #ajapaik-game-modal-photo {
   max-width: 100vw;
   padding-right: 0 !important;
   padding-left: 0 !important;
 }
 
+#ajapaik-photoview-main-photo,
+#ajapaik-photoview-rephoto
 #ajapaik-photoview-rephoto {
-  max-width: 100vw;
-  max-height: 70vh;
+  max-width: 95vw;
 }
 
 #ajapaik-compareview-secondary-photo {
